# senec2mqtt

./: README.md  pyproject.toml
src/senec2mqtt/: __init__.py  senec_data_collector.py  utils.py
tests/senec2mqtt/: test_convertion.py
