[project]
name = "senec2mqtt"
description = "tbd"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Sebastian Koell", email = "seb.koell@googlemail.com" }
]


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]


dependencies = [
    "paho-mqtt",
    "pysenec"
]

[project.scripts]
flit = "flit:main"

[project.optional-dependencies]
dev = [
    "pylint ~=2.14.0",
]
test = [
    "pytest-cov ~=3.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 95"

[tool.coverage.run]
source = ["src"]